fix: z-index navbar

--- a/client/src/styles/LandingPage/LandingPage.module.css
+++ b/client/src/styles/LandingPage/LandingPage.module.css
@@ -9,7 +9,6 @@
 }
 
 .flyAndTitle > h1 {
-    z-index: 1;
     font-size: 70px;
     margin: 0;
     padding-top: 3rem;
