--- a/client/src/styles/LandingPage/NavBarL.module.css
+++ b/client/src/styles/LandingPage/NavBarL.module.css
@@ -4,6 +4,7 @@
     background-color: #FFFFFF;
     position: fixed;
     width: 100%;
+    z-index: 1;
 }
 
 .logoNav {
